--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,7 @@
 
 h1 {
     font-weight: 700;
+    margin-bottom: 25px;
 }
 
 ul {
@@ -66,5 +67,11 @@ ul {
 
     .card-item p{
         font-size: 25px;
+    }
+
+    #loading-image {
+        margin-top: 40px;
+        border-radius: 4%;
+        width: 95%;
     }
 }
